--- a/public/assets/css/organizer/dashboard.css
+++ b/public/assets/css/organizer/dashboard.css
@@ -63,6 +63,7 @@
     border: 1px solid #ddd;
     padding: 20px;
     border-radius: 10px;
+    width: 700px;
 }
 .recent-events h3{
     color: #4f4f4f;
@@ -76,6 +77,7 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    border: 1px solid #ddd;
 }
 
 thead tr {
@@ -105,6 +107,7 @@ th {
     border: 1px solid #ddd;
     padding: 20px;
     border-radius: 10px;
+    width: 700px;
 }
 
 .upcoming-events h3{
@@ -139,4 +142,7 @@ th {
 .see:hover{
     background-color: #f7f7f7f7;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+.noevent{
+    text-align: center;
 }
