--- a/public/assets/css/user/paymentsuccess.css
+++ b/public/assets/css/user/paymentsuccess.css
@@ -6,6 +6,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     border: 1px solid #f2f1f1;  
+    margin-top: 40px;
 }
 .success-payment{
   display: grid;
