--- a/public/assets/css/admin/eventapproval.css
+++ b/public/assets/css/admin/eventapproval.css
@@ -1,9 +1,3 @@
-.table-container {
-  background: #fff;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
 .table-container h2 {
   color: #4f4f4f;
@@ -186,9 +180,7 @@ th {
 /* Filter Styles */
 .filters-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin-bottom: 30px;
   flex-wrap: wrap;
   gap: 15px;
   padding: 15px;
@@ -197,33 +189,26 @@ th {
 }
 
 .filter-group {
-  display: flex;
-  gap: 10px;
-  align-items: center;
+  margin-left: auto;
 }
 
 .filter-group.start {
   flex-grow: 1;
 }
 
-.search-box {
-  position: relative;
-  width: 100%;
-  max-width: 400px;
-}
-
-.search-box i {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #9aa0ac;
+.filters-container input {
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #e5e7eb;
+  border-radius: 6px;
   font-size: 14px;
+  outline: none;
+  transition: border-color 0.2s;
+  color: #4f4f4f;
+  background-color: transparent;
 }
-
-.search-box input {
-  width: 100%;
-  padding: 10px 10px 10px 35px;
+.filters-container select {
+  padding: 10px;
   border: 1px solid #e5e7eb;
   border-radius: 6px;
   font-size: 14px;
@@ -233,7 +218,7 @@ th {
   background-color: transparent;
 }
 
-.search-box input:focus {
+input:focus {
   border-color: #2563eb;
 }
 
@@ -250,6 +235,11 @@ th {
 
 .filter-select:focus {
   border-color: #2563eb;
+}
+.btn-success{
+  background-color: green;
+  color: white;
+  padding: 10px;
 }
 
 .btn-primary {
